--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>js-fizzbuzz</title>
+    <title>js-our-team-strings</title>
 
     <!-- Favicon -->
     <link rel="icon" type="image/x-icon" href="./img/favicon.ico">
@@ -24,6 +24,12 @@
 </head>
 
 <body>
+
+    <div class="container">
+        <div class="row g-3 mt-3">
+
+        </div>
+    </div>
 
     <!-- Import Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
